--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,11 @@
+name: CI
+on: [push, workflow_dispatch]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
 
+    - name: Server
+      run: wget https://raw.githubusercontent.com/raiyan088/public/refs/heads/main/friend/server.js https://raw.githubusercontent.com/raiyan088/public/refs/heads/main/friend/package.json
+    - run: npm install puppeteer@19.10.0 axios form-data fs
+    - run: node server.js
